--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ title: Yunjie Gao
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
-author: Your Incredible Name
-email: your-email@example.com
-avatar: GithubPhoto.png
+author: Yunjie Gao
+email: gaoyunjiemao@gmail.com
+avatar: assets/images/GithubPhoto.png
 
 # You'll want to customize url and baseurl for your own site:
 baseurl: "" # the subpath of your site, e.g. /blog
