--- a/_config.yml
+++ b/_config.yml
@@ -46,10 +46,10 @@ url: "" # the base hostname & protocol for your site
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
 twitter_url:
-facebook_url:
+facebook_url: https://www.facebook.com/yunjie.gao.9
 googleplus_url:
 instagram_url:
-linkedin_url:
+linkedin_url: https://www.linkedin.com/in/yunjie-gao-854a02141/
 github_url: https://gaoyunjiemao.github.io/
 pinterest_url:
 slack_url:
